@@ -3,20 +3,15 @@
 echo "About to run Compress/Decompress/Roundtrip test for LZF & GZIP impls on REST corpus files"
 #Note: config modified to mimick a specific appplication server config
 
-java -server -cp lib/japex/\* \
- -Xms786m -Xmx1572m -XX:+DisableExplicitGC \
- -XX:PermSize=128m -XX:PermSize=128m -XX:PermSize=128m \
- -Djava.awt.headless=true \
- -Djapex.runsPerDriver=1 \
+java -server -Xmx512M \
+ -Djava.awt.headless=true -Djapex.contextClassLoader=true -Djapex.numberOfThreads=1 \
+ -Djapex.runsPerDriver=1 -Djapex.warmupTime=5  -Djapex.runTime=10 \
+ -Djapex.plotGroupSize=6 \
  -Djapex.resultUnitX=CompressRatio \
  -Djapex.resultUnitY=MBps \
- -Djapex.warmupTime=7 \
- -Djapex.runTime=30 \
- -Djapex.numberOfThreads=1 \
  -Djapex.reportsDirectory=reports/lzfs-compress \
- -Djapex.plotGroupSize=6 \
  -Djapex.inputDir="testdata/rest" \
- com.sun.japex.Japex \
+ -jar target/jvm-compressor-benchmark-*.jar -verbose \
  cfg/tests-lzf-rest-roundtrip.xml
 
 echo "Done!";
